# console_elk_logger_handlers

./: .gitignore  LICENSE  dev-requirements.txt  install_venv.sh  logger.py  pyproject.toml  requirements.txt  setup.py  tmp.py
console_elk_logger_handlers/: __init__.py
console_elk_logger_handlers/src/: logger.py
console_elk_logger_handlers/src/console_elk_logger_handlers/: colorized_console.py
console_elk_logger_handlers/src/console_elk_logger_handlers/some examples/: coloredlogs_example.py  colorized_console_copy.py
handlers/: __init__.py  colorized_console.py  elk_handler.py
src/console_elk_logger_handlers/: __init__.py  colorized_console.py  elk_handler.py
