[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "console_elk_logger_handlers"
version = "0.0.1"
dependencies = [
  "anyio==4.13.0",
  "certifi==2026.2.25",
  "charset-normalizer==3.4.6",
  "coloredlogs==15.0.1",
  "elastic-transport==9.2.1",
  "elasticsearch==9.3.0",
  "humanfriendly==10.0",
  "idna==3.11",
  "python-dateutil==2.9.0.post0",
  "requests==2.33.1",
  "six==1.17.0",
  "sniffio==1.3.1",
  "termcolor==3.3.0",
  "typing_extensions==4.15.0",
  "urllib3==2.6.3"
]
requires-python = ">=3.9"
authors = [
  { name="Efi Butovski", email="efibutov@gmail.com" },
]
readme = "README.md"


classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"