[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "console_elk_logger_handlers"
description = "An example package demonstrating how to make one"
readme = "README.md"
version = "0.0.1"
authors = [
  { name="Efi Butovski", email="efibutov@gmail.com" },
]

license = "Apache-2.0"

dependencies = [
  "anyio==4.13.0",
  "certifi==2026.2.25",
  "charset-normalizer==3.4.6",
  "coloredlogs==15.0.1",
  "elastic-transport==9.2.1",
  "elasticsearch==9.3.0",
  "humanfriendly==10.0",
  "idna==3.11",
  "python-dateutil==2.9.0.post0",
  "requests==2.33.1",
  "six==1.17.0",
  "sniffio==1.3.1",
  "termcolor==3.3.0",
  "typing_extensions==4.15.0",
  "urllib3==2.6.3"
]
requires-python = ">=3.9"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# State that the version will be defined dynamically below.
dynamic = ["version"]

[project.urls]
# These URLs are displayed in a sidebar on PyPI. You don't have to have them,
# but they can help people learn more about your project. You can include as
# many named URLs as you want.  They can be any URL, not just to GitHub.
"Source code" = "https://github.com/nedbat/pkgsample"
"Issue tracker" = "https://github.com/nedbat/pkgsample/issues"
