# This file configures the project for packaging, and can also hold other
# tools' configuration settings.
#
# More details about what can go in this file:
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html


[project]
# Thi is simple logging handlers
name = "log_handlers"
description = "An example package demonstrating how to make one"
readme = "README.md"

authors = [
  { name="Efi Butovski", email="efibutov@gmail.com" },
]

license = "Apache-2.0"

version = "0.0.1"

dependencies = [
  "anyio==4.13.0",
  "certifi==2026.2.25",
  "charset-normalizer==3.4.6",
  "coloredlogs==15.0.1",
  "elastic-transport==9.2.1",
  "elasticsearch==9.3.0",
  "humanfriendly==10.0",
  "idna==3.11",
  "python-dateutil==2.9.0.post0",
  "requests==2.33.1",
  "six==1.17.0",
  "sniffio==1.3.1",
  "termcolor==3.3.0",
  "typing_extensions==4.15.0",
  "urllib3==2.6.3"
]
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# State that the version will be defined dynamically below.
dynamic = ["version"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
